syntax = "proto3";

package go.micro.service.serverless;

service Apps {
	rpc Create(CreateRequest) returns (CreateResponse) {};
	rpc Delete(DeleteRequest) returns (DeleteResponse) {};
	rpc List(ListRequest) returns (ListResponse) {};
}

message App {
	// eg. "my-app-1"
	string name = 1;
	// Optional commit hash to deploy a certain version
	string version = 2;
	// URL of the GitHub repo
	string source = 3;
	// One of the predefined image tags from here https://github.com/micro/cells
	// See top level folders
	string language = 4;
	// Optional folder to cd into while building the app.
	string folder = 5;
}

message CreateRequest {
	App app = 1;
}

message CreateResponse {}

message DeleteRequest {
	App app = 1;
}

message DeleteResponse {}

message ListRequest {}

message ListResponse {
	repeated App apps = 1;
}
